remove encoding config from checkstyle plugin