@@ -2,9 +2,9 @@ package practice;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
+import model.Cat;
 import model.Person;
 
 public class StreamPractice {
@@ -16,14 +16,13 @@ public class StreamPractice {
      * "Can't get min value from list: < Here is our input 'numbers' >"
      */
     public int findMinEvenNumber(List<String> numbers) {
-        return numbers.stream()
-                .map(n -> Arrays.stream(n.split(",")))
-                .flatMap(n -> n)
-                .mapToInt(n -> Integer.parseInt((String) n))
+        return numbers
+                .stream()
+                .flatMap(n -> Arrays.stream(n.split(",")))
+                .mapToInt(Integer::parseInt)
                 .filter(n -> n % 2 == 0)
-                .min().orElseGet(() -> {
-                    throw new RuntimeException("Can't get min value from list: " + numbers);
-                });
+                .min()
+                .orElseThrow(() -> new RuntimeException("Can't get min value from list: " + numbers));
     }
 
     /**
@@ -32,7 +31,8 @@ public class StreamPractice {
      * But before that subtract 1 from each element on an odd position (having the odd index).
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
-        return IntStream.range(0, numbers.size())
+        return IntStream
+                .range(0, numbers.size())
                 .map(i -> (i % 2 != 0) ? numbers.get(i) - 1 : numbers.get(i))
                 .filter(n -> n % 2 != 0)
                 .average()
@@ -48,10 +48,11 @@ public class StreamPractice {
      * Example: select men who can be recruited to army (from 18 to 27 years old inclusively).
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
-        return peopleList.stream()
-                .filter(p -> p.getAge() >= fromAge && p.getAge() <= toAge)
-                .filter(p -> p.getSex().equals(Person.Sex.MAN))
-                .collect(Collectors.toList());
+        return peopleList
+                .stream()
+                .filter(person -> person.getAge() >= fromAge && person.getAge() <= toAge)
+                .filter(person -> person.getSex().equals(Person.Sex.MAN))
+                .toList();
     }
 
     /**
@@ -66,11 +67,15 @@ public class StreamPractice {
      */
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        return peopleList.stream()
-                .filter(p -> p.getAge() >= fromAge)
-                .filter(p -> ((p.getAge() <= maleToAge) && (p.getSex().equals(Person.Sex.MAN)))
-                        || ((p.getAge() <= femaleToAge) && (p.getSex().equals(Person.Sex.WOMAN))))
-                .collect(Collectors.toList());
+        return peopleList
+                .stream()
+                .filter(person -> person.getAge() >= fromAge)
+                .filter(person ->
+                        ((person.getAge() <= maleToAge)
+                                && (person.getSex() == Person.Sex.MAN))
+                                || ((person.getAge() <= femaleToAge)
+                                && (person.getSex() == Person.Sex.WOMAN)))
+                .toList();
     }
 
     /**
@@ -79,13 +84,13 @@ public class StreamPractice {
      * return the names of all cats whose owners are women from `femaleAge` years old inclusively.
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
-        return peopleList.stream()
+        return peopleList
+                .stream()
                 .filter(p -> p.getSex().equals(Person.Sex.WOMAN))
                 .filter(p -> p.getAge() >= femaleAge)
-                .map(p -> p.getCats().stream())
-                .flatMap(c -> c)
-                .map(c -> c.getName())
-                .collect(Collectors.toList());
+                .flatMap(p -> p.getCats().stream())
+                .map(Cat::getName)
+                .toList();
     }
 
     /**
@@ -101,11 +106,11 @@ public class StreamPractice {
      * parametrized with Candidate in CandidateValidator.
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
-        CandidateValidator validator = new CandidateValidator();
-        return candidates.stream()
-                .filter(validator)
-                .map(c -> c.getName())
+        return candidates
+                .stream()
+                .filter(new CandidateValidator())
+                .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
